Files from Simone

--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 
-<html lang="eng">
-
+<html lang="it">
+	
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eurotherm Leonardo Planner</title>
-	<link rel="icon" href="tab_logo.png">
-	<link href="style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Eurotherm Leonardo Planner</title>
+	<link href="https://fonts.cdnfonts.com/css/ibm-plex-sans" rel="stylesheet">
+  <link href="/Users/simone/Desktop/eurotherm-main/www/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script>
+    function hide_div() {
+      var mydiv = document.getElementById("reg");
+      mydiv.style.display = 'none';
+    }
 
-	<script>
-
-		function hide_div()
-		{
-			var mydiv = document.getElementById("reg");
-			mydiv.style.display = 'none';
-		}
-
-		function show_div()
-		{
-			var mydiv = document.getElementById("reg");
-			mydiv.style.display = 'block';
-		}
+    function show_div() {
+      var mydiv = document.getElementById("reg");
+      mydiv.style.display = 'block';
+    }
 
 		function validate_form()
 		{
@@ -103,30 +102,40 @@
 </head>
 
 <body>
+		
+<nav class="nav nav-pills flex-column flex-sm-row">
+  <div class="left">
+    <a href="/Users/simone/Desktop/eurotherm-main/www/index_eng.html" class="d-inline-flex link-body-emphasis text-decoration-none">
+    <img src="logo-leonardo-planner-2.png" width="120" height="auto">
+    </a>
+  </div>
+
+  <div class="center">
+    <a id="home-link" class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/Users/simone/Desktop/eurotherm-main/www/index_eng.html"><strong>Home</strong></a>
+    <a id="risultati-link" class="flex-sm-fill text-sm-center nav-link" href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/save_file.py"><strong>Results</strong></a>
+    <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link" href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/archive.py"><strong>Archive</strong></a>
+    <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link" href="https://www.eurotherm.info/it/contatti"><strong>Contact</strong></a>
+  </div>
+
+  <div class="right"> 
+    <a href="/Users/simone/Desktop/eurotherm-main/www/index.html">
+    <img src="ita.png" width="20px" class="ita">
+    </a>
+    <a href="/Users/simone/Desktop/eurotherm-main/www/index_eng.html">
+		<img src="eng.png" width="20px">
+    </a>
+  </div>
+</nav>
+	
+	<div class="px-4 pt-5 text-center box-testo">
+    <h1 class="display-4 fw-bold text-body-emphasis text-center"><strong>Welcome to Leonardo Planner</strong></h1>
+    <div class="col-lg-10 mx-auto">
+      <p class="lead mb-4">Fill in all required fields, including project details and upload your file with dxf extension. Our tool will process the information you provide to create a customized rough draft, providing you with maximum comfort and energy efficiency. Choose Leonardo, the ideal solution for heating and cooling your space!</p>
+      </div>
+</div>
 
 
-	<div class="header">
-			<img src="banner.png" alt="">
-	</div>
-	<div>
-		<a href="index.html"><img src="ita.png" width="30px"></a>
-		<a href="index_eng.html"><img src="uk.png" width="30px"></a>
-	</div>
-
-	<div class="navmenu">
-		<ul>
-    		<li><a href="index.html">Home</a></li>
-			<li><a href="cgi-bin/show_file.py">Results</a></li>
-    		<li><a href="cgi-bin/archive.py">Archive</a></li>
-    		<li><a href="https://www.eurotherm.info/it/contatti">Contacts</a></li>
-    		<li style="float: right; width: 50px;"><a href="logout">Logout</a></li>
-		</ul>
-	</div>
-
-
-	<h3>Fill up the fields below for Leornardo radiant ceiling</h3>
-
-	<form action="cgi-bin/save_file.py" 
+	<form action="/Users/simone/Desktop/eurotherm-main/www//cgi-bin/save_file.py" 
 		  method="post" 
 		  name="leodata"
 		  autocomplete="off"
@@ -134,38 +143,42 @@
 		  enctype="multipart/form-data">
 
 	<input name="file" id="fileid" hidden/>
-
-	<div class="section">
-		<h4>Select system details</h4>
+		
+	  <div class="form-group">
+		<div class="section">
+		<h4><img src="soffitto.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;<strong>Select plant details</strong></h4>
 			<!--p id="ra"><input type="radio" checked="yes" id="radio" name="head" value="warm" onchange="warm()">Solo riscaldamento</p-->
   			<!--p id="ra"><input type="radio"  name="head" id="radio" value="cold" onchange="cold()"=>Riscaldamento/raffrescamento </p-->
-		<label for="ptype">Tipology:</label>
-		<select name="ptype">
-    		<option value="55">Leonardo 5,5</option>
-  			<option value="35">Leonardo 3,5</option>
-  			<option value="30">Leonardo 3,0 plus</option>
-		</select>
-		<p id="clt">
-		<label for="ptype">Regulation:</label>
+      		<p id="type" class="nome_menu text-left">
+            <label for="ptype5" class="label">Type of ceiling system:</label>
+				
+            <select name="ptype" class="box">
+                <option value="55">Leonardo 5,5</option>
+                <option value="35">Leonardo 3,5</option>
+                <option value="30">Leonardo 3,0 PLUS</option>
+            </select>
+      		</p>
+<p id="clt" class="nome_menu">
+	  <label for="ptype" class="label">Smart365 regulation:</label>
 		<!--select name="control" id="control" onchange="update()"-->
-		<select name="control" id="control">
-    		<option value="reg"/>With regulation</option>
-  			<option value="noreg"/>Without regulation</option>
+		<select name="control" class="box" id="control">
+    		<option value="reg">With regulation</option>
+  			<option value="noreg">Without regulation</option>
 		</select>
-		</p>
+	  </p>
 
-		<p id="air">
-		<label for="head" id="air_label">Air Treatment:</label>
-		<select name="head" id="head" onchange="update_iface()">
+		<p id="air" class="nome_menu">
+		<label for="head" class="label" id="air_label">Air treatment:</label>
+		<select name="head" class="box" id="head" onchange="update_iface()">
     		<option value="air">With air treatment</option>
   			<option value="none">Without air treatment</option>
 		</select>
-		</p>
+	  </p>
 
 	</div>
-	<div class="section" style="display:none" id="reg">
-		<h4>Air Treatment</h4>
 
+	<div class="section" style="display:none" id="reg">
+<h4><img src="VMC.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;&nbsp;<strong>Controlled Mechanical Ventilation</strong></h4>
 		<!--label for="regulator">Regolazione:</label>
 		<select name="regulator">
     		<option value="None">Senza regolazione</option>
@@ -174,60 +187,77 @@
   			<option value="head">Testine 230 V, 2 fili</option>
 		</select-->
 
-		<p id="rg">
-		<label for="regulator">Tipology:</label>
-		<select name="regulator">
+		<p id="rg" class="nome_menu">
+		<label for="regulator" class="label">Typology:</label>
+		<select name="regulator" class="box">
     		<option value="dehum">Dehumidification only</option>
-  			<option value="dehum_int">Dehumidification and integration</option>
-  			<option value="dehum_int_ren">Dehumidification, integration e renewal</option>
+  			<option value="dehum_int">Dehumidification + integration</option>
+  			<option value="dehum_int_ren">Dehumidification, integration + renovation</option>
 		</select>
-		</p>
+	  </p>
 
-		<p id=rg">
-		<label for="inst">Installation:</label>
-		<select name="inst">
+		<p id="rg1" class="nome_menu">
+		<label for="inst" class="label">Installation:</label>
+		<select name="inst" class="box">
     		<option value="vert">Vertical</option>
   			<option value="horz">Horizontal</option>
 		</select>
-		</p>
+	  </p>
 
-		<p id=rg">
-		<label for="height">Average height in metres:</label>
-		<input type="text" id="height" name="height" value="2.7">
-		</p>
+	  <p id="rg2">
+		<label for="height" class="label">Average height in meters:</label>
+		<input name="height" type="text" class="placeholder" id="height" value="2.7">
+	  </p>
 
 	</div>
+</div>
+
+<div class="form-group">
 	<div class="section">
-		<h4>Select EURASS installation service:</h4>
-		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />Without installation</p>
-  		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>With installation</p>
+		<h4><img src="posa.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;&nbsp;<strong>Eurass installation service</strong></h4>
+	  <p id="ra"><input name="laid" type="radio" class="spunta" onchange="show_client()" value="without" checked="yes" />
+      Without installation service</p>
+	  <p id="ra1"><input  name="laid" type="radio" class="spunta" onchange="hide_client()" value="with"/>
+      With installation service</p>
 
 		<div id="client" style="display:none">
-			<p><label for="cli_name">Client:</label>
-			<input type="text" id="cli_name" name="cname" value="Client name"> </p>
-			<p><label for="cli_address">Address:</label>
-			<input type="text" id="cli_address" name="caddr" value="Address"></p>
-			<p><label for="cli_company">Company:</label>
-			<input type="text" id="cli_company" name="ccomp" value="Company name"></p>
+		  <p><label for="cli_name" class="label">Client:</label>
+		  <input name="cname" type="text" class="placeholder" id="cli_name" placeholder="Client Name"> </p>
+			
+			<p><label for="cli_address" class="label">Construction Site Address:</label>
+			<input name="caddr" type="text" class="placeholder" id="cli_address" placeholder="Address"></p>
+			<p><label for="cli_company" class="label">Company:</label>
+			<input name="ccomp" type="text" class="placeholder" id="cli_company" placeholder="Company name"></p>
 		</div>
 	</div>
 	<div class="section">
-		<h4>Load DXG file</h4>
-		<p><label for="filename" id="sel1">Select file:</label>
-		<input type="file" id="dxfinput" name="filename" accept=".dxf" /> </p>
+    <h4><img src="upload.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;&nbsp;<strong>Upload the file in .DXF format</strong></h4>
+    <p>
+<input type="file" id="dxfinput" name="filename" accept=".dxf" />
+    </p>
 
-		<p><label for="units">Units:</label>
-		<select name="units">
-    		<option value="auto">auto</option>
-  			<option value="0.1">millimetres</option>
-  			<option value="1">centimetres</option>
-  			<option value="100">metres</option>
-		</select>
+    <p>
+        <label for="units" class="label">Units of measurement:</label>
+        <select name="units" class="box"> 
+            <option value="auto">Automatic</option>
+            <option value="0.1">Millimeters</option>
+            <option value="1">Centimeters</option>
+            <option value="100">Meters</option>
+        </select>
+    </p>
+</div>
 
 	</div>
 
-	<button id="submit" type="submit">Compute</button>
-	</form>
+</form>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-6 text-center">
+		<button type="button" class="btn btn-lg btn-danger btn-calcola">Compute</button>
+    </div>
+  </div>
+</div>
+
 
 
 	<script>
@@ -238,7 +268,50 @@
 		};
 
 		show_div()
-	</script>
+		
+  function checkFormCompletion() {
+    const filename = document.forms["leodata"]["filename"].value;
+    const ptype = document.forms["leodata"]["ptype"].value;
+    const control = document.forms["leodata"]["control"].value;
+    const head = document.forms["leodata"]["head"].value;
+    const height = document.forms["leodata"]["height"].value;
+    const cname = document.forms["leodata"]["cname"].value;
+    const caddr = document.forms["leodata"]["caddr"].value;
+    const ccomp = document.forms["leodata"]["ccomp"].value;
+
+    const isFormComplete = filename !== "" &&
+      ptype !== "" &&
+      control !== "" &&
+      (control === "noreg" || head !== "") &&
+      (head === "none" || (head === "air" && height !== "")) &&
+      (document.forms["leodata"]["laid"].value === "without" || (cname !== "" && caddr !== "" && ccomp !== ""));
+
+    const calcolaButton = document.querySelector(".btn-calcola");
+    calcolaButton.disabled = !isFormComplete;
+
+    if (isFormComplete) {
+      calcolaButton.classList.add("btn-danger");
+    } else {
+      calcolaButton.classList.remove("btn-danger");
+    }
+  }
+
+  document.getElementById("dxfinput").onchange = function() {
+    fileref = document.getElementById("fileid");
+    fileref.value = this.value.replace(/.*[\/\\]/, '');
+    checkFormCompletion();
+  };
+
+  const formElements = document.querySelectorAll("input, select");
+  formElements.forEach((element) => {
+    element.addEventListener("input", checkFormCompletion);
+  });
+
+  // Initially check form completion on page load
+  checkFormCompletion();
+</script>
+
+
 </body>
 
 </html>
