--- a/www/index.html
+++ b/www/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 
 <html lang="it">
-
+	
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eurotherm Leonardo Planner</title>
-	<link rel="icon" href="tab_logo.png">
-	<link href="style.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Eurotherm Leonardo Planner</title>
+	<link href="https://fonts.cdnfonts.com/css/ibm-plex-sans" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script>
+    function hide_div() {
+      var mydiv = document.getElementById("reg");
+      mydiv.style.display = 'none';
+    }
 
-	<script>
-
-		function hide_div()
-		{
-			var mydiv = document.getElementById("reg");
-			mydiv.style.display = 'none';
-		}
-
-		function show_div()
-		{
-			var mydiv = document.getElementById("reg");
-			mydiv.style.display = 'block';
-		}
+    function show_div() {
+      var mydiv = document.getElementById("reg");
+      mydiv.style.display = 'block';
+    }
 
 		function validate_form()
 		{
@@ -103,30 +102,39 @@
 </head>
 
 <body>
+		
+<nav class="nav nav-pills flex-column flex-sm-row">
+  <div class="left">
+    <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none">
+      <img src="logo-leonardo-planner-2.png" width="120" height="auto">
+    </a>
+  </div>
+
+  <div class="center">
+    <a id="home-link" class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/Users/simone/Desktop/eurotherm-main/www/index.html"><strong>Home</strong></a>
+    <a id="risultati-link" class="flex-sm-fill text-sm-center nav-link" href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/save_file.py"><strong>Risultati</strong></a>
+    <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link" href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/archive.py"><strong>Archivio</strong></a>
+    <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link" href="https://www.eurotherm.info/it/contatti"><strong>Contatti</strong></a>  </div>
+
+  <div class="right"> 
+    <a href="/Users/simone/Desktop/eurotherm-main/www/index.html">
+    <img src="ita.png" width="20px" class="ita">
+    </a>
+    <a href="/Users/simone/Desktop/eurotherm-main/www/index_eng.html">
+      <img src="eng.png" width="20px">
+    </a>
+  </div>
+</nav>
+	
+	<div class="px-4 pt-5 text-center box-testo">
+    <h1 class="display-4 fw-bold text-body-emphasis text-center"><strong>Benvenuto in Leonardo Planner</strong></h1>
+    <div class="col-lg-10 mx-auto">
+      <p class="lead mb-4">Compila tutti i campi richiesti, inclusi i dettagli del progetto e carica il tuo file con estensione dxf. Il nostro strumento elaborerà le informazioni fornite per creare un progetto di massima personalizzato, offrendoti il massimo comfort e rendimento energetico. Scegli Leonardo, la soluzione ideale per il riscaldamento e raffrescamento del tuo spazio!</p>
+      </div>
+    </div>
 
 
-	<div class="header">
-			<img src="banner.png" alt="">
-	</div>
-	<div>
-		<a href="index.html"><img src="ita.png" width="30px"></a>
-		<a href="index_eng.html"><img src="uk.png" width="30px"></a>
-	</div>
-
-	<div class="navmenu">
-		<ul>
-    		<li><a href="index.html">Home</a></li>
-			<li><a href="cgi-bin/show_file.py">Risultati</a></li>
-    		<li><a href="cgi-bin/archive.py">Archivio</a></li>
-    		<li><a href="https://www.eurotherm.info/it/contatti">Contatti</a></li>
-    		<li style="float: right; width: 50px;"><a href="logout">Logout</a></li>
-		</ul>
-	</div>
-
-
-	<h3>Compila i campi sottostanti per il soffitto radiante Leonardo</h3>
-
-	<form action="cgi-bin/save_file.py" 
+	<form action="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/save_file.py" 
 		  method="post" 
 		  name="leodata"
 		  autocomplete="off"
@@ -134,38 +142,42 @@
 		  enctype="multipart/form-data">
 
 	<input name="file" id="fileid" hidden/>
-
-	<div class="section">
-		<h4>Seleziona dettagli impianto</h4>
+		
+	  <div class="form-group">
+		<div class="section">
+		<h4><img src="soffitto.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;<strong>Seleziona i dettagli dell'impianto</strong></h4>
 			<!--p id="ra"><input type="radio" checked="yes" id="radio" name="head" value="warm" onchange="warm()">Solo riscaldamento</p-->
   			<!--p id="ra"><input type="radio"  name="head" id="radio" value="cold" onchange="cold()"=>Riscaldamento/raffrescamento </p-->
-		<label for="ptype">Tipologia:</label>
-		<select name="ptype">
-    		<option value="55">Leonardo 5,5</option>
-  			<option value="35">Leonardo 3,5</option>
-  			<option value="30">Leonardo 3,0 plus</option>
-		</select>
-		<p id="clt">
-		<label for="ptype">Regolazione:</label>
+      		<p id="type" class="nome_menu text-left">
+            <label for="ptype5" class="label">Tipologia di sistema a soffitto:</label>
+				
+            <select name="ptype" class="box">
+                <option value="55">Leonardo 5,5</option>
+                <option value="35">Leonardo 3,5</option>
+                <option value="30">Leonardo 3,0 plus</option>
+            </select>
+      		</p>
+<p id="clt" class="nome_menu">
+	  <label for="ptype" class="label">Regolazione Smart365:</label>
 		<!--select name="control" id="control" onchange="update()"-->
-		<select name="control" id="control">
-    		<option value="reg"/>Con regolazione</option>
-  			<option value="noreg"/>Senza regolazione</option>
+		<select name="control" class="box" id="control">
+    		<option value="reg">Con regolazione</option>
+  			<option value="noreg">Senza regolazione</option>
 		</select>
-		</p>
+	  </p>
 
-		<p id="air">
-		<label for="head" id="air_label">Trattamento Aria:</label>
-		<select name="head" id="head" onchange="update_iface()">
+		<p id="air" class="nome_menu">
+		<label for="head" class="label" id="air_label">Trattamento aria:</label>
+		<select name="head" class="box" id="head" onchange="update_iface()">
     		<option value="air">Con trattamento aria</option>
   			<option value="none">Senza trattamento aria</option>
 		</select>
-		</p>
+	  </p>
 
 	</div>
-	<div class="section" style="display:none" id="reg">
-		<h4>Trattamento Aria</h4>
 
+	<div class="section" style="display:none" id="reg">
+<h4><img src="VMC.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;&nbsp;<strong>Ventilazione Meccanica Controllata</strong></h4>
 		<!--label for="regulator">Regolazione:</label>
 		<select name="regulator">
     		<option value="None">Senza regolazione</option>
@@ -174,60 +186,75 @@
   			<option value="head">Testine 230 V, 2 fili</option>
 		</select-->
 
-		<p id="rg">
-		<label for="regulator">Tipologia:</label>
-		<select name="regulator">
+		<p id="rg" class="nome_menu">
+		<label for="regulator" class="label">Tipologia:</label>
+		<select name="regulator" class="box">
     		<option value="dehum">Solo deumidificazione</option>
   			<option value="dehum_int">Deumidificazione e integrazione</option>
   			<option value="dehum_int_ren">Deumidificazione, integrazione e rinnovo</option>
 		</select>
 		</p>
 
-		<p id=rg">
-		<label for="inst">Installazione:</label>
-		<select name="inst">
+		<p id="rg1" class="nome_menu">
+		<label for="inst" class="label">Installazione:</label>
+		<select name="inst" class="box">
     		<option value="vert">Verticale</option>
   			<option value="horz">Orizzontale</option>
 		</select>
 		</p>
 
-		<p id=rg">
-		<label for="height">Altezza media in metri:</label>
-		<input type="text" id="height" name="height" value="2.7">
-		</p>
+	  <p id="rg2">
+		<label for="height" class="label">Altezza media in metri:</label>
+		<input name="height" type="text" class="placeholder" id="height" value="2.7">
+	  </p>
 
 	</div>
+</div>
+
+<div class="form-group">
 	<div class="section">
-		<h4>Seziona servizio di posa EURASS:</h4>
-		<p id="ra"><input type="radio" checked="yes" name="laid" value="without" onchange="show_client()" />Senza Posa</p>
-  		<p id="ra"><input type="radio"  name="laid" value="with" onchange="hide_client()"/>Con Posa</p>
+		<h4><img src="posa.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;&nbsp;<strong>Servizio di posa in opera Eurass</strong></h4>
+	  <p id="ra"><input name="laid" type="radio" class="spunta" onchange="show_client()" value="without" checked="yes" />Senza Posa</p>
+	  <p id="ra1"><input  name="laid" type="radio" class="spunta" onchange="hide_client()" value="with"/>Con Posa</p>
 
 		<div id="client" style="display:none">
-			<p><label for="cli_name">Cliente:</label>
-			<input type="text" id="cli_name" name="cname" value="Nome Cliente"> </p>
-			<p><label for="cli_address">Indirizzo Cantiere:</label>
-			<input type="text" id="cli_address" name="caddr" value="Indirizzo"></p>
-			<p><label for="cli_company">Agenzia:</label>
-			<input type="text" id="cli_company" name="ccomp" value="Nome Agenzia"></p>
+		  <p><label for="cli_name" class="label">Cliente:</label>
+		  <input name="cname" type="text" class="placeholder" id="cli_name" placeholder="Nome cliente"> </p>
+			
+			<p><label for="cli_address" class="label">Indirizzo Cantiere:</label>
+			<input name="caddr" type="text" class="placeholder" id="cli_address" placeholder="Indirizzo"></p>
+			<p><label for="cli_company" class="label">Agenzia:</label>
+			<input name="ccomp" type="text" class="placeholder" id="cli_company" placeholder="Nome agenzia"></p>
 		</div>
 	</div>
 	<div class="section">
-		<h4>Carica il file formato DXF </h4>
-		<p><label for="filename" id="sel1">Seleziona un file:</label>
-		<input type="file" id="dxfinput" name="filename" accept=".dxf" /> </p>
+    <h4><img src="upload.png" alt="" width="50" height="50" class="icona img-fluid"/>&nbsp;&nbsp;<strong>Carica il file in formato .DXF</strong></h4>
+    <p>
+<input type="file" id="dxfinput" name="filename" accept=".dxf" />
+    </p>
 
-		<p><label for="units">Unit&agrave; di misura:</label>
-		<select name="units">
-    		<option value="auto">auto</option>
-  			<option value="0.1">millimetri</option>
-  			<option value="1">centimetri</option>
-  			<option value="100">metri</option>
-		</select>
+    <p>
+        <label for="units" class="label">Unit&agrave; di misura:</label>
+        <select name="units" class="box"> 
+            <option value="auto">Automatico</option>
+            <option value="0.1">Millimetri</option>
+            <option value="1">Centimetri</option>
+            <option value="100">Metri</option>
+        </select>
+    </p>
+</div>
 
 	</div>
 
-	<button id="submit" type="submit">Calcola</button>
-	</form>
+</form>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-6 text-center">
+		<button type="button" class="btn btn-lg btn-danger btn-calcola">Calcola</button>
+    </div>
+  </div>
+</div>
+
 
 
 	<script>
@@ -238,7 +265,50 @@
 		};
 
 		show_div()
-	</script>
+		
+  function checkFormCompletion() {
+    const filename = document.forms["leodata"]["filename"].value;
+    const ptype = document.forms["leodata"]["ptype"].value;
+    const control = document.forms["leodata"]["control"].value;
+    const head = document.forms["leodata"]["head"].value;
+    const height = document.forms["leodata"]["height"].value;
+    const cname = document.forms["leodata"]["cname"].value;
+    const caddr = document.forms["leodata"]["caddr"].value;
+    const ccomp = document.forms["leodata"]["ccomp"].value;
+
+    const isFormComplete = filename !== "" &&
+      ptype !== "" &&
+      control !== "" &&
+      (control === "noreg" || head !== "") &&
+      (head === "none" || (head === "air" && height !== "")) &&
+      (document.forms["leodata"]["laid"].value === "without" || (cname !== "" && caddr !== "" && ccomp !== ""));
+
+    const calcolaButton = document.querySelector(".btn-calcola");
+    calcolaButton.disabled = !isFormComplete;
+
+    if (isFormComplete) {
+      calcolaButton.classList.add("btn-danger");
+    } else {
+      calcolaButton.classList.remove("btn-danger");
+    }
+  }
+
+  document.getElementById("dxfinput").onchange = function() {
+    fileref = document.getElementById("fileid");
+    fileref.value = this.value.replace(/.*[\/\\]/, '');
+    checkFormCompletion();
+  };
+
+  const formElements = document.querySelectorAll("input, select");
+  formElements.forEach((element) => {
+    element.addEventListener("input", checkFormCompletion);
+  });
+
+  // Initially check form completion on page load
+  checkFormCompletion();
+</script>
+
+
 </body>
 
 </html>
