--- a/www/index.html
+++ b/www/index.html
@@ -109,20 +109,20 @@
 
         <div class="center">
             <a id="home-link" class="flex-sm-fill text-sm-center nav-link" aria-current="page"
-                href="/Users/simone/Desktop/eurotherm-main/www/index.html"><strong>Home</strong></a>
+                href="index.html"><strong>Home</strong></a>
             <a id="risultati-link" class="flex-sm-fill text-sm-center nav-link"
-                href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/save_file.py"><strong>Risultati</strong></a>
+                href="cgi-bin/show_file.py"><strong>Risultati</strong></a>
             <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link"
-                href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/archive.py"><strong>Archivio</strong></a>
+                href="cgi-bin/archive.py"><strong>Archivio</strong></a>
             <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link"
                 href="https://www.eurotherm.info/it/contatti"><strong>Contatti</strong></a>
         </div>
 
         <div class="right">
-            <a href="/Users/simone/Desktop/eurotherm-main/www/index.html">
+            <a href="index.html">
                 <img src="ita.png" width="20px" class="ita">
             </a>
-            <a href="/Users/simone/Desktop/eurotherm-main/www/index_eng.html">
+            <a href="index_eng.html">
                 <img src="eng.png" width="20px">
             </a>
         </div>
