English interface now activated

--- a/www/index.html
+++ b/www/index.html
@@ -271,7 +271,8 @@
                     <div class="col-sm-6 text-center">
                         <!--button type="submit" class="btn btn-lg btn-danger btn-calcola">Calcola</button-->
 
-                        <button type="submit" id="submit">Calcola</button>
+                        <button type="submit" id="submit"
+ 							class="btn btn-lg btn-danger btn-calcola">Calcola</button>
 
                     </div>
                 </div>
