Fixed typo in HTML

--- a/www/index.html
+++ b/www/index.html
@@ -133,7 +133,7 @@
                 Planner</strong></h1>
         <div class="col-lg-10 mx-auto">
             <p class="lead mb-4">Compila tutti i campi richiesti, inclusi i dettagli del progetto e
-                carica il tuo file con estensione dxf. Il nostro strumento elaborerà le informazioni
+                carica il tuo file con estensione dxf. Il nostro strumento elaborer&agrave; le informazioni
                 fornite per creare un progetto di massima personalizzato, offrendoti il massimo
                 comfort e rendimento energetico. Scegli Leonardo, la soluzione ideale per il
                 riscaldamento e raffrescamento del tuo spazio!</p>
