Fixing issues with logo

--- a/www/index.html
+++ b/www/index.html
@@ -103,7 +103,7 @@
     <nav class="nav nav-pills flex-column flex-sm-row">
         <div class="left">
             <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <img src="logo-leonardo-planner-2.png" width="120" height="auto">
+                <img src="logo-leonardo-planner.png" width="120" height="auto">
             </a>
         </div>
 
