--- a/www/index.html
+++ b/www/index.html
@@ -183,8 +183,7 @@
 
             <div class="section" style="display:none" id="reg">
                 <h4><img src="VMC.png" alt="" width="50" height="50"
-                        class="icona img-fluid" />&nbsp;&nbsp;<strong>Ventilazione Meccanica
-                        Controllata</strong></h4>
+                        class="icona img-fluid" />&nbsp;&nbsp;<strong> Trattamento Aria </strong></h4>
                 <!--label for="regulator">Regolazione:</label>
 		<select name="regulator">
     		<option value="None">Senza regolazione</option>
