--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -102,15 +102,15 @@
 
     <nav class="nav nav-pills flex-column flex-sm-row">
         <div class="left">
-            <a href="/Users/simone/Desktop/eurotherm-main/www/index_eng.html" class="d-inline-flex link-body-emphasis text-decoration-none">
+            <a href="index_eng.html" class="d-inline-flex link-body-emphasis text-decoration-none">
                 <img src="logo-leonardo-planner.png" width="120" height="auto">
             </a>
         </div>
 
         <div class="center">
-            <a id="home-link" class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="/Users/simone/Desktop/eurotherm-main/www/index_eng.html"><strong>Home</strong></a>
-            <a id="risultati-link" class="flex-sm-fill text-sm-center nav-link" href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/save_file.py"><strong>Results</strong></a>
-            <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link" href="/Users/simone/Desktop/eurotherm-main/www/cgi-bin/archive.py"><strong>Archive</strong></a>
+            <a id="home-link" class="flex-sm-fill text-sm-center nav-link" aria-current="page" href="index_eng.html"><strong>Home</strong></a>
+            <a id="risultati-link" class="flex-sm-fill text-sm-center nav-link" href="cgi-bin/show_file.py"><strong>Results</strong></a>
+            <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link" href="cgi-bin/archive.py"><strong>Archive</strong></a>
             <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link" href="https://www.eurotherm.info/it/contatti"><strong>Contact</strong></a>
         </div>
 
@@ -170,7 +170,7 @@
             </div>
 
             <div class="section" style="display:none" id="reg">
-                <h4><img src="VMC.png" alt="" width="50" height="50" class="icona img-fluid" />&nbsp;&nbsp;<strong>Controlled Mechanical Ventilation</strong></h4>
+                <h4><img src="VMC.png" alt="" width="50" height="50" class="icona img-fluid" />&nbsp;&nbsp;<strong>Air Treatment</strong></h4>
                 <!--label for="regulator">Regolazione:</label>
 		<select name="regulator">
     		<option value="None">Senza regolazione</option>
