--- a/www/done_eng.html
+++ b/www/done_eng.html
@@ -35,13 +35,13 @@
 
         <div class="center">
             <a id="home-link" class="flex-sm-fill text-sm-center nav-link" aria-current="page"
-                href="../index.html"><strong>Home</strong></a>
+                href="../index_eng.html"><strong>Home</strong></a>
             <a id="risultati-link" class="flex-sm-fill text-sm-center nav-link"
-                href="show_file.py?lang=ita"><strong>Risultati</strong></a>
+                href="show_file.py?lang=eng"><strong>Risults</strong></a>
             <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link"
-                href="archive.py?lang=ita"><strong>Archivio</strong></a>
+                href="archive.py?lang=eng"><strong>Archive</strong></a>
             <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link"
-                href="https://www.eurotherm.info/it/contatti"><strong>Contatti</strong></a>
+                href="https://eurotherm.info/fieraISH"><strong>Contacts</strong></a>
 		</div>
 
         <div class="right">
