--- a/www/loading.html
+++ b/www/loading.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="1;url=show_file.py?filename=%s" />
+	<meta http-equiv="refresh" content="1;url=show_file.py?filename=%s&lang=ita" />
 </head>
 <body>
 <p>Leonardo Planner sta elaborando il vostro progetto</p>
