--- a/www/done.html
+++ b/www/done.html
@@ -40,6 +40,8 @@
                 href="show_file.py?lang=ita"><strong>Risultati</strong></a>
             <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link"
                 href="archive.py?lang=ita"><strong>Archivio</strong></a>
+            <a id="impostazioni-link" class="flex-sm-fill text-sm-center nav-link"
+                href="settings.py?lang=ita"><strong>Impostazioni</strong></a>
             <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link"
                 href="https://www.eurotherm.info/it/contatti"><strong>Contatti</strong></a>
 		</div>
