--- a/www/done_eng.html
+++ b/www/done_eng.html
@@ -37,9 +37,11 @@
             <a id="home-link" class="flex-sm-fill text-sm-center nav-link" aria-current="page"
                 href="../index_eng.html"><strong>Home</strong></a>
             <a id="risultati-link" class="flex-sm-fill text-sm-center nav-link"
-                href="show_file.py?lang=eng"><strong>Risults</strong></a>
+                href="show_file.py?lang=eng"><strong>Results</strong></a>
             <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link"
                 href="archive.py?lang=eng"><strong>Archive</strong></a>
+            <a id="impostazioni-link" class="flex-sm-fill text-sm-center nav-link"
+                href="settings.py?lang=eng"><strong>Settings</strong></a>
             <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link"
                 href="https://eurotherm.info/fieraISH"><strong>Contacts</strong></a>
 		</div>
