--- a/www/done_eng.html
+++ b/www/done_eng.html
@@ -41,7 +41,7 @@
             <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link"
                 href="archive.py?lang=eng"><strong>Archive</strong></a>
             <a id="impostazioni-link" class="flex-sm-fill text-sm-center nav-link"
-                href="settings.py?lang=eng"><strong>Settings</strong></a>
+                href="options.py?lang=eng"><strong>Settings</strong></a>
             <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link"
                 href="https://eurotherm.info/fieraISH"><strong>Contacts</strong></a>
 		</div>
