--- a/www/index.html
+++ b/www/index.html
@@ -114,6 +114,8 @@
                 href="cgi-bin/show_file.py?lang=ita"><strong>Risultati</strong></a>
             <a id="archivio-link" class="flex-sm-fill text-sm-center nav-link"
                 href="cgi-bin/archive.py?lang=ita"><strong>Archivio</strong></a>
+            <a id="impostazioni-link" class="flex-sm-fill text-sm-center nav-link"
+                href="cgi-bin/options.py?lang=ita"><strong>Impostazioni</strong></a>
             <a id="contatti-link" class="flex-sm-fill text-sm-center nav-link"
                 href="https://www.eurotherm.info/it/contatti"><strong>Contatti</strong></a>
         </div>
