Panel type selection

--- a/www/index.html
+++ b/www/index.html
@@ -182,6 +182,15 @@
                     </select>
                 </p>
 
+				<div id="panels" class="nome_menu"><b>Escludi:</b>
+					<ul class="nome_menu">
+						<li><input type="checkbox" name="full"    value="1">&nbsp; Pannello intero 2000x1200</li>
+						<li><input type="checkbox" name="lux"    value="1">&nbsp; Panello Lux 2000x1200</li>
+						<li><input type="checkbox" name="split"   value="1">&nbsp; Mezzo pannello 2000x1000</li>
+						<li><input type="checkbox" name="half"    value="1">&nbsp; Mezzo pannello 1000x1200</li>
+						<li><input type="checkbox" name="quarter" value="1">&nbsp; Quarto di pannello 1000x600</li>
+					</ul>
+                </div>
             </div>
 
             <div class="section" style="display:none" id="reg">
