--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -170,6 +170,15 @@
                     </select>
                 </p>
 
+				<div id="panels" class="nome_menu"><b>Exclude:</b>
+					<ul class="nome_menu">
+						<li><input type="checkbox" name="full"    value="1">&nbsp; Full panel 2000x1200</li>
+						<li><input type="checkbox" name="lux"    value="1">&nbsp;  Lux panel 2000x1200</li>
+						<li><input type="checkbox" name="split"   value="1">&nbsp; Half panel 2000x1000</li>
+						<li><input type="checkbox" name="half"    value="1">&nbsp; Half panel 1000x1200</li>
+						<li><input type="checkbox" name="quarter" value="1">&nbsp; Quarter panel 1000x600</li>
+					</ul>
+                </div>
             </div>
 
             <div class="section" style="display:none" id="reg">
