--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -170,6 +170,12 @@
                     </select>
                 </p>
 
+				<p id="target" class="nome_menu">
+                    <label for="target" class="label" id="air_label">Percentage cover: </label>
+					<input id="spinner" name="target" 
+							type="number" min="0" max="100" step="0.1" value="100" class="box">
+				</p>
+
 				<div id="panels" class="nome_menu"><b>Exclude:</b>
 					<ul class="nome_menu">
 						<li><input type="checkbox" name="full"    value="1">&nbsp; Full panel 2000x1200</li>
