--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -23,6 +23,17 @@
             mydiv.style.display = 'block';
         }
 
+		function toggle_target_div() {
+			input = document.getElementsByName("enable_target")[0];
+            var mydiv = document.getElementById("target_div");
+			if (input.checked == false) {
+            	mydiv.style.display = 'none';
+			} else {
+				mydiv.style.display = 'block';
+			}
+		}
+
+
         function validate_form() {
             fname = document.forms["leodata"]["filename"].value
             if (fname == "") {
@@ -172,10 +183,17 @@
 
 				<p id="target" class="nome_menu">
                     <label for="target" class="label" id="air_label">Percentage cover: </label>
-					<input id="spinner" name="target" 
-							type="number" min="0" max="100" step="0.1" value="100" class="box">
+					<input type="checkbox" name="enable_target"  value="1" 
+						onchange="toggle_target_div()"> Customized
 				</p>
 
+				<div id="target_div" style="display:none">
+				<p id="target" class="nome_menu">
+					<label for="target" class="label" id="air_label">Insert percentage target: </label>
+						<input id="spinner" name="target" 
+							type="number" min="0" max="100" step="0.1" value="70" class="box">&nbsp; %
+				</p>
+				</div>
 				<div id="panels" class="nome_menu"><b>Exclude:</b>
 					<ul class="nome_menu">
 						<li><input type="checkbox" name="full"    value="1">&nbsp; Full panel 2000x1200</li>
@@ -225,9 +243,9 @@
         <div class="form-group">
             <div class="section">
                 <h4><img src="posa.png" alt="" width="50" height="50" class="icona img-fluid" />&nbsp;&nbsp;<strong>Eurass installation service</strong></h4>
-                <p id="ra"><input name="laid" type="radio" class="spunta" onchange="show_client()" value="without" checked="yes" />
+                <p id="ra"><input name="laid" type="radio" class="spunta"  value="without" checked="yes" />
                     Without installation service</p>
-                <p id="ra1"><input name="laid" type="radio" class="spunta" onchange="hide_client()" value="with" />
+                <p id="ra1"><input name="laid" type="radio" class="spunta"  value="with" />
                     With installation service</p>
 
                 <div id="client" style="display:none">
