--- a/www/index.html
+++ b/www/index.html
@@ -215,11 +215,21 @@
 
 				<div id="panels" class="nome_menu"><b>Escludi:</b>
 					<ul class="nome_menu">
-						<li><input type="checkbox" name="full"    value="1">&nbsp; Pannello intero 2000x1200</li>
-						<li><input type="checkbox" name="lux"    value="1">&nbsp; Panello Lux 2000x1200</li>
-						<li><input type="checkbox" name="split"   value="1">&nbsp; Mezzo pannello 2000x1000</li>
-						<li><input type="checkbox" name="half"    value="1">&nbsp; Mezzo pannello 1000x1200</li>
-						<li><input type="checkbox" name="quarter" value="1">&nbsp; Quarto di pannello 1000x600</li>
+						<li>
+							<img src="leonardo-55-1200x2000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="full"    value="1">&nbsp; 2000x1200x60 mm</li>
+						<li>
+							<img src="leonardo-55-1200x1000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="split"   value="1">&nbsp; 1200x1000x60 mm</li>
+						<li>
+							<img src="leonardo-35-600x2000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="half"    value="1">&nbsp; 600x2000x60 mm</li>
+						<li>
+							<img src="leonardo-55-600x1000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="quarter" value="1">&nbsp; 1000x600x60 mm</li>
+						<li>
+							<img src="leonardo-lux-1200x2000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="lux"    value="1">&nbsp; 2000x1200x60 LUX</li>
 					</ul>
                 </div>
             </div>
