--- a/www/index_eng.html
+++ b/www/index_eng.html
@@ -196,11 +196,21 @@
 				</div>
 				<div id="panels" class="nome_menu"><b>Exclude:</b>
 					<ul class="nome_menu">
-						<li><input type="checkbox" name="full"    value="1">&nbsp; Full panel 2000x1200</li>
-						<li><input type="checkbox" name="lux"    value="1">&nbsp;  Lux panel 2000x1200</li>
-						<li><input type="checkbox" name="split"   value="1">&nbsp; Half panel 2000x1000</li>
-						<li><input type="checkbox" name="half"    value="1">&nbsp; Half panel 1000x1200</li>
-						<li><input type="checkbox" name="quarter" value="1">&nbsp; Quarter panel 1000x600</li>
+						<li>
+							<img src="leonardo-55-1200x2000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="full"    value="1">&nbsp; 2000x1200x60 mm</li>
+						<li>
+							<img src="leonardo-55-1200x1000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="split"   value="1">&nbsp; 1200x1000x60 mm</li>
+						<li>
+							<img src="leonardo-35-600x2000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="half"    value="1">&nbsp; 600x2000x60 mm</li>
+						<li>
+							<img src="leonardo-55-600x1000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="quarter" value="1">&nbsp; 1000x600x60 mm</li>
+						<li>
+							<img src="leonardo-lux-1200x2000.png" alt="" width="100" height="100" class="icona img-fluid" />
+							<input type="checkbox" name="lux"    value="1">&nbsp; 2000x1200x60 LUX</li>
 					</ul>
                 </div>
             </div>
